--- a/src/main/resources/templates/instructorDashboard/fragments/step2CourseMedia.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/step2CourseMedia.html
@@ -34,82 +34,100 @@
         </div>
         <form th:action="@{/instructordashboard/createcourse/coursecontent}" th:object="${coursestep2}" method="POST" enctype="multipart/form-data">
             <input type="hidden" name="courseId" th:value="${courseId}" />
-        <div class="row">
-            <div class="col-lg-12">
-                <!-- Title -->
-                <h4>Course media</h4>
+            <input type="hidden" id="imageUrl" th:value="${imageUrl}">
+            <input type="hidden" id="videoUrl" th:value="${videoUrl}">
+            <div class="row">
+                <div class="col-lg-12">
+                    <!-- Title -->
+                    <h4>Course media</h4>
 
-                <hr>
+                    <hr>
 
-                <div class="row">
-                    <!-- Upload image START -->
-                    <div class="col-12">
-                        <div
-                                class="text-center justify-content-center align-items-center p-4 p-sm-5 border border-2 border-dashed position-relative rounded-3">
-                            <!-- Image -->
-                            <img th:src="@{/assets/images/element/gallery.svg}" class="h-100px" alt="">
-                            <div>
-                                <h6 style="color: #0a58ca" class="my-2">Upload course image here</a></h6>
-                                <label>
-										<span>
-											 <input type="file" id="avatarFile" accept=".png, .jpg, .jpeg" th:field="*{image}" class="form-control">
-                                                              <div class="form-group"><img style="max-height: 250px; display: none;" alt="avatar-preview" id="avatarPreview"></div>
-										</span>
-                                </label>
-                            </div>
-                        </div>
-
-                    </div>
-                    <!-- Upload image END -->
-
-                    <!-- Upload video START -->
-                    <div class="col-12">
-                        <!-- Input -->
-                        <div class="position-relative my-4">
-                            <hr>
-                            <p class="small position-absolute top-50 start-50 translate-middle bg-body px-3 mb-0">Or
-                            </p>
-                        </div>
-
-
-
+                    <div class="row">
+                        <!-- Upload image START -->
                         <div class="col-12">
-                            <label class="form-label">Upload video</label>
-                            <div class="input-group mb-3">
-                                <input type="file" th:field="*{video}" class="form-control" id="videoFile" accept="video/mp4">
-                                <label class="input-group-text">.mp4</label>
+                            <div
+                                    class="text-center justify-content-center align-items-center p-4 p-sm-5 border border-2 border-dashed position-relative rounded-3">
+                                <!-- Image container that will toggle between SVG and preview -->
+                                <div id="imageContainer">
+                                    <!-- Default SVG image (will be hidden when preview is shown) -->
+                                    <img id="defaultGalleryIcon" th:src="@{/assets/images/element/gallery.svg}" class="h-100px" alt="">
+                                    
+                                    <!-- Preview image (initially hidden) -->
+                                    <img style="max-height: 250px; display: none;" alt="avatar-preview" id="avatarPreview" class="img-fluid rounded">
+                                </div>
+                                
+                                <div>
+                                    <h6 style="color: #0a58ca" class="my-2">Upload course image here</h6>
+                                    <label>
+                                        <span>
+                                            <input type="file" id="avatarFile" accept=".png, .jpg, .jpeg" th:field="*{image}" class="form-control">
+                                        </span>
+                                    </label>
+                                </div>
                             </div>
+
                         </div>
+                        <!-- Upload image END -->
 
-                        <!-- Preview -->
-                        <h5 class="mt-4">Video preview</h5>
-                        <video id="videoPreview" style="max-width: 70%; display: none;" controls></video>
+                        <!-- Upload video START -->
+                        <div class="col-12">
+                            <!-- Input -->
+                            <div class="position-relative my-4">
+                                <hr>
+                                <p class="small position-absolute top-50 start-50 translate-middle bg-body px-3 mb-0">Or
+                                </p>
+                            </div>
 
-                        <script>
-                            $(document).ready(function () {
-                                $("#videoFile").change(function (e) {
-                                    const file = e.target.files[0];
-                                    if (file) {
-                                        const url = URL.createObjectURL(file);
-                                        $("#videoPreview").attr("src", url).show();
-                                    } else {
-                                        $("#videoPreview").hide().attr("src", "");
+
+
+                            <div class="col-12">
+                                <label class="form-label">Upload video</label>
+                                <div class="input-group mb-3">
+                                    <input type="file" th:field="*{video}" class="form-control" id="videoFile" accept="video/mp4">
+                                    <label class="input-group-text">.mp4</label>
+                                </div>
+                            </div>
+
+                            <!-- Preview -->
+                            <h5 class="mt-4">Video preview</h5>
+                            <video id="videoPreview" style="max-width: 70%;" controls></video>
+
+                            <script>
+                                $(document).ready(function () {
+                                    // Hiển thị preview từ backend nếu có
+                                    const videoUrl = $("#videoUrl").val();
+                                    if (videoUrl) {
+                                        $("#videoPreview").attr("src", videoUrl).show();
+                                    } else if (sessionStorage.getItem("videoPreview")) {
+                                        $("#videoPreview").attr("src", sessionStorage.getItem("videoPreview")).show();
                                     }
-                                });
-                            });
-                        </script>
-                    </div>
-                    <!-- Upload video END -->
 
-                    <!-- Step 2 button -->
+                                    $("#videoFile").change(function (e) {
+                                        const file = e.target.files[0];
+                                        if (file) {
+                                            const url = URL.createObjectURL(file);
+                                            $("#videoPreview").attr("src", url).show();
+                                            sessionStorage.setItem("videoPreview", url);
+                                        } else {
+                                            $("#videoPreview").hide().attr("src", "");
+                                            sessionStorage.removeItem("videoPreview");
+                                        }
+                                    });
+                                });
+                            </script>
+                        </div>
+                        <!-- Upload video END -->
+
+                        <!-- Step 2 button -->
+
+                    </div>
+
+                    <!-- SCRIPT: Save preview in sessionStorage -->
+
+
 
                 </div>
-
-                <!-- SCRIPT: Save preview in sessionStorage -->
-
-
-
-            </div>
                 <div class="content-card">
                     <div class="d-flex justify-content-between">
                         <button class="btn btn-outline-secondary me-3" name="action" value="previousstep">
@@ -123,7 +141,7 @@
                         </button>
                     </div>
                 </div>
-        </div>
+            </div>
         </form>
     </div>
     <!-- Bootstrap CSS -->
@@ -131,17 +149,39 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-      <script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script>
         $(document).ready(() => {
-          const avatarFile = $("#avatarFile");
-          avatarFile.change(function (e) {
-            const imgURL = URL.createObjectURL(e.target.files[0]);
-            $("#avatarPreview").attr("src", imgURL);
-            $("#avatarPreview").css({ "display": "block" });
-          });
+            // Hiển thị preview từ backend nếu có
+            const imageUrl = $("#imageUrl").val();
+            if (imageUrl) {
+                $("#avatarPreview").attr("src", imageUrl).show();
+                $("#defaultGalleryIcon").hide(); // Ẩn biểu tượng SVG
+            } else if (sessionStorage.getItem("avatarPreview")) {
+                $("#avatarPreview").attr("src", sessionStorage.getItem("avatarPreview")).show();
+                $("#defaultGalleryIcon").hide(); // Ẩn biểu tượng SVG
+            }
+
+            $("#avatarFile").change(function (e) {
+                const file = e.target.files[0];
+                if (file) {
+                    const imgURL = URL.createObjectURL(file);
+                    $("#avatarPreview").attr("src", imgURL).show();
+                    $("#defaultGalleryIcon").hide(); // Ẩn biểu tượng SVG
+                    sessionStorage.setItem("avatarPreview", imgURL);
+                } else {
+                    $("#avatarPreview").hide();
+                    $("#defaultGalleryIcon").show(); // Hiện lại biểu tượng SVG
+                    sessionStorage.removeItem("avatarPreview");
+                }
+            });
         });
-      </script>
+
+        $("form").submit(function() {
+            sessionStorage.removeItem("avatarPreview");
+            sessionStorage.removeItem("videoPreview");
+        });
+    </script>
     <style>
         body {
             min-height: 100vh;
