Update permissions and separate admin login

--- a/src/main/resources/templates/adminDashBoard/fragments/content.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/content.html
@@ -345,7 +345,7 @@
             }
 
             // Tạo URL để tải file Excel tổng hợp
-            const url = `/admin/export-all?startDate=${startDate}&endDate=${endDate}`;
+            const url = `/admin/export-excel-charts?startDate=${startDate}&endDate=${endDate}`;
             window.location.href = url;
         }
 
