--- a/src/main/resources/templates/loginPage/normalLogin/login.html
+++ b/src/main/resources/templates/loginPage/normalLogin/login.html
@@ -50,6 +50,7 @@
                                 </div>
                                 <!-- Login Form  -->
                                 <form action="/perform_login" method="post" class="mb-4">
+
                                     <div class="mb-3">
                                         <label for="email" class="form-label">Email</label>
                                         <input type="email" class="form-control form-control-lg"
@@ -76,6 +77,7 @@
                                     <button type="submit" class="btn btn-primary btn-lg w-100 gradient-btn mb-3">
                                         Sign In
                                     </button>
+                                    <input type="hidden" name="loginType" value="user">
                                 </form>
 
                                 <!-- Divider -->
